# michelson-adt

./: .gitignore  .gitlab-ci.yml  LICENCE  README.md  dune-project  log.txt  michelson-adt.opam  michelson.opam
michelson/: adt.ml  dune  dune-project  lexer.mll
src/: _tags  adt.ml  adt.mli  ast.ml  ast.mli  dune  lexer.mll  parser.mly  pp.ml  type_checker.ml  why3_michelson.ml  why3_michelson_trans.ml
src/lib/: adt.ml  adt.mli  dune  gadt.ml#  lexer.mll  location.mli  michelson.ml  michelson.mli  michelson_adt.ml  parser.ml  parser.mly  pp.ml
src/lib/adt/: adt.ml  adt.mli  dune
src/lib/carthage/: adt.ml  adt.mli  dune  lexer.mll  micheline.ml  micheline.mli  parse.ml  parser.ml  parser.mly  pp.ml  typer.ml  typer.ml#
src/lib/common/: annot.ml  annot.mli  dune  loc.ml  loc.mli  node.ml  node.mli  parser.ml  stack.ml  stack.mli
src/lib/edo/: adt.ml  adt.mli  dune  parse.ml  parser.ml  pp.ml  typ.ml  typ.mli  typed_adt.ml  typed_adt.mli  typer.ml
src/lib/hangzhou/: adt.ml  adt.mli  dune  parser.ml  pp.ml  test.ml  typed_adt.ml  typer.ml
src/lib/loc/: dune  loc.ml  loc.mli
src/lib/micheline/: dune  lexer.mll  loc.ml  loc.mli  node.ml  node.mli  parser.mly
src/test/: dune  main.ml  test.ml  test_carthage.ml  test_edo.ml
src/test/carthage/: carthage_test.ml  dune
src/test/edo/: dune  typing.ml
src/test/hangzhou/: dune  hangzhou.ml  parsing.ml  typing.ml
tests/: KT191ueSknQofTzx1t8uH5nF23jdNmy6Fq4R.tz  KT1ATxPswBFoXpD1AqzBQf5Ni5yb1gMidAvy.tz  KT1B5Lm2YFFBQGPc6vTicsgLTiYpHPpxBsSb.tz  KT1CUTjTqf4UMf6c9A8ZA4e1ntWbLVTnvrKG.tz  KT1CudURg62dvbXXY3MFFeugbXKCjsPX7VrQ.tz  KT1DEpTxK2qyFhTCT2QCZ1Ly4f43YVNbzHP1.tz  KT1LVLUsC1WCo4yHzeoDEE8FxxoC7EW6bSyp.tz  KT1V4jijVy1HfVWde6HBVD1cCygZDtFJK4Xz.tz  KT1XvLy4uv4LBJr6xEwYPj1sPj3RDaBNEYhr.tz
tests/carthage/: all_primitives.tz
tests/edo/: all_primitives.tz  factorial.tz
why3_plugin/: dune  dune-project  why3_michelson.ml  why3_michelson_trans.ml  why3michelson.opam
why3_plugin/tests/: axiomatic.mlw  dataTypes.mlw  drop.tz  natural.mlw  util.mlw
