(library
  (public_name why3michelson)
  (flags :standard -w -9-32-27 -linkall)
  (library_flags -linkall)
  (modules why3_michelson_trans why3_michelson)
  (libraries why3 michelson))

;; cf https://discuss.ocaml.org/t/dune-problems-using-dynlink-plugins/2874
(rule
  (targets plugin_why3michelson.cmxs)
  (deps why3michelson.cmxa)
  (action (run ocamlfind ocamlopt
                  -shared
                  -linkall
                  -linkpkg
                  -package zarith
                  -package michelson
                  %{deps}
                  -o %{targets}
  )))

(install
  (section lib_root)
  (files
   (plugin_why3michelson.cmxs as why3michelson/plugins/plugin_why3michelson.cmxs))
  (package why3michelson))